--- a/wildphy.cabal
+++ b/wildphy.cabal
@@ -2,12 +2,12 @@ name:                wildphy
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/wildphy#readme
+homepage:            https://github.com/shamash2014/wildphy#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
+author:              Roman Myronov
+maintainer:          warp.buddhist@gmail.com
+copyright:           2017 Roman Myronov
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -22,6 +22,8 @@ library
                      , datetime
                      , text
                      , wai
+                     , network
+                     , mongoDB
   default-language:    Haskell2010
 
 executable wildphy-exe
@@ -50,4 +52,4 @@ test-suite wildphy-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/wildphy
+  location: https://github.com/shamash2014/wildphy
